fix text overflow on forms

--- a/src/components/Create/Create.module.css
+++ b/src/components/Create/Create.module.css
@@ -20,7 +20,7 @@
     line-height: 50px;
     display: block;
     margin: 10px auto;
-    width: 100%;
+    width: calc(100% - 20px);
     padding-left: 20px;
 }
 
