--- a/src/components/Edit/Edit.module.css
+++ b/src/components/Edit/Edit.module.css
@@ -20,7 +20,7 @@
     line-height: 50px;
     display: block;
     margin: 10px auto;
-    width: 100%;
+    width: calc(100% - 20px);
     padding-left: 20px;
 }
 
@@ -28,7 +28,6 @@
     margin-top: 30px;
     font-size: 20px;
     padding: 0px;
-
     border: none;
     background-color: #ea486a;
     border-radius: 5px;
